# inbox/src/controllers/handlers/notification-opt-out/get-notification-opt-outs-handler.ts
@@ -4,7 +4,7 @@ import { IHttpServerComponent } from '@well-known-components/interfaces'
 type NotificationOptOutResponse = {
   metadataKey: string
   metadataValue: string
-  notificationTypes: string[] | null
+  notificationTypes: string[]
 }
 
 export async function getNotificationOptOutsHandler(
@@ -17,11 +17,21 @@ export async function getNotificationOptOutsHandler(
 
   const optOuts = await context.components.notificationOptOutsManager.getOptOuts(address)
 
-  const response: NotificationOptOutResponse[] = optOuts.map((optOut) => ({
-    metadataKey: optOut.metadata_key,
-    metadataValue: optOut.metadata_value,
-    notificationTypes: optOut.notification_types
-  }))
+  // Group by metadata_key and metadata_value
+  const grouped = new Map<string, NotificationOptOutResponse>()
+  for (const optOut of optOuts) {
+    const key = `${optOut.metadata_key}:${optOut.metadata_value}`
+    if (!grouped.has(key)) {
+      grouped.set(key, {
+        metadataKey: optOut.metadata_key,
+        metadataValue: optOut.metadata_value,
+        notificationTypes: []
+      })
+    }
+    grouped.get(key)!.notificationTypes.push(optOut.notification_type)
+  }
+
+  const response: NotificationOptOutResponse[] = Array.from(grouped.values())
 
   return {
     body: response
